# weewx-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WEEWX_HYBRID_ARCHITECTURE.md  WEEWX_NATIVE_SKIN_ARCHITECTURE.md  WEEWX_OLLAMA_OPENWEBUI_INTEGRATION.md  pyproject.toml
skins/weewx-hybrid/: history.html.tmpl  index.html.tmpl  skin.conf
skins/weewx-hybrid/CSS/: style.css
skins/weewx-hybrid/HTML/: history.html.tmpl  index.html.tmpl
skins/weewx-hybrid/css/: style.css
skins/weewx-hybrid/js/: main.js
src/: __init__.py  weewx_hybrid_api.py  weewx_hybrid_service.py  weewx_mcp_server.py
