[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weewx-mcp"
version = "0.1.0"
description = "MCP server for querying WeeWX weather station data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["weewx", "weather", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.20.0",
    "uvicorn>=0.20.0",
]
api = [
    "starlette>=0.20.0",
    "uvicorn>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/weewx-mcp"
Documentation = "https://github.com/yourusername/weewx-mcp"
Repository = "https://github.com/yourusername/weewx-mcp.git"
Issues = "https://github.com/yourusername/weewx-mcp/issues"

[project.scripts]
weewx-mcp = "weewx_mcp_server:main"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools]
packages = ["src"]
